--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@
 }
 
 .container{
-    max-width: 98%;
-    width: 100%;
+    width:99%;
     margin: auto;
 }
 
@@ -44,10 +43,15 @@
 }
 .logo{
     order: 1;
-    font-size: 2.3rem;
-    max-width: 70%;
+    width: 300px;
+    align-items: center;
 }
 
+@media(max-width:500px){
+  .logo{
+    width: 250px;
+  }
+}
 .menu-items li{
     list-style: none;
     margin-left: 1.5rem;
@@ -840,6 +844,10 @@
     padding-bottom: 2%;
   }
 
+  .property-heading{
+    padding-top: 2%;
+    padding-bottom: 2%; 
+  }
   
   .intro{
     text-align: center;
@@ -867,7 +875,7 @@
     margin-bottom: 7%;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 60%;
     border-radius: 100%;
   }
 
@@ -876,4 +884,7 @@
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    
   }
